<resources>
    <string name="app_name">PokeDex</string>
    <string name="find_pokemon">Search pokemon by name or id</string>
    <string name="oops_no_internet">No internet connection, try again</string>
    <string name="empty_list">Not found</string>
    <string name="stats">BASE STATS</string>
    <string name="about">ABOUT</string>
    <string name="evolution">EVOLUTION CHAIN</string>
    <string name="type_example">POISON</string>

    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="abilities">Abilities</string>
    <string name="description">Description</string>
    <string name="weakness">Weakness</string>
    
    <string name="hp">HP</string>
    <string name="attack">ATTACK</string>
    <string name="defense">DEFENSE</string>
    <string name="special_attack">SPECIAL ATTACK</string>
    <string name="special_defense">SPECIAL DEFENSE</string>
    <string name="speed">SPEED</string>
    <string name="radar">RADAR</string>
    <string name="loading">Loading…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>